--- a/RuntimeMeshLoader.uplugin
+++ b/RuntimeMeshLoader.uplugin
@@ -10,9 +10,9 @@
   "DocsURL": "",
   "MarketplaceURL": "",
   "SupportURL": "",
-  "CanContainContent": true,
+  "CanContainContent": false,
   "IsBetaVersion": false,
-  "Installed": false,
+  "Installed": true,
   "Modules": [
     {
       "Name": "RuntimeMeshLoader",
